# -hexlet-django-blog

./: README.md  pyproject.toml
hexlet_django_blog/: settings.py  urls.py
hexlet_django_blog/templates/: about.html
