[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["igorsokolov <i.sokolov@trafficwave.kz>"]
readme = "README.md"
packages = [{include = "hexlet_django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
django-admin = "^2.0.2"
django = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
